2007-08-20  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/fastpath.c:
	* nsd/nsd.h: Added suppoirt for stat64 in FastStat. It uses TCL
	defined HAVE_STRUCT_STAT64

2007-08-20  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* nsd/nsproxylib.c: Proxy ID is now allocated dynamically
	instead of having limited/fixed length of 16 characters.

2007-08-14  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* nsd/tclmisc.c: Replaced uint32 with ns_uint32 so this 
	gets compiled on platforms not supporting autoconf 2.60

2007-08-12  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/tclinit.c: Remove the async cancel stuff. See module: nsloopctl.

	* nsd/cookies.c:
	* tests/cookies.test:
	* NEWS:
	* doc/src/mann/ns_cookie.man: Rename -maxage option to ns_setcookie
	-expires to match common usage throughout rest of API. Now handles
	absolute and relative time values.

	* include/ns.h:
	* nsd/cookies.c:
	* tests/cookies.test:
	* NEWS:
	* doc/src/mann/ns_cookie.man: Cookies are now set with the HttpOnly
	option by default which makes the cookie data unavailable to client
	javascript engines (on those browsers which support it). A new
	-scriptable option is available to ns_setcookie to get the old
	behaviour. HttpOnly cookies are not as susceptible to XSS attacks:
	secure by default.
	The C API has a couple of new flags: NS_COOKIE_SECURE and
	NS_COOKIE_SCRIPTABLE, which replace the old 1/0 flag to
	Ns_ConnSetCookieEx().

	* nsd/nsd.h:
	* nsd/driver.c: Use Ns_ConfigFlag() for flags.

2007-08-11  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/return.c: Add new Ns_ConnSetEncodedTypeHeader. The distinction
	between this and Ns_ConnSetTypeHeader is that the mime-type header is
	set in an encoding aware manner with a charset declaration. Either it is
	provided as part of the mime-type and the connection encoding is set
	accordingly, or a charset name is constructed according to current
	connection encoding (see Ns_ConnSetEncoding).
